--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -9,7 +9,7 @@ env:
   CUDA_VISIBLE_DEVICES: "3" # Tartarus device for GPU testing
 
 agents:
-  queue: Oceananigans
+  queue: "Oceananigans"
 
 steps:
   - label: "🏕️ initialize tartarus environment"
