--- a/Project.toml
+++ b/Project.toml
@@ -60,7 +60,7 @@ OceananigansOneAPIExt = "oneAPI"
 OceananigansReactantExt = ["Reactant", "KernelAbstractions", "ConstructionBase"]
 
 [compat]
-AMDGPU = "1.3.6, 2"
+AMDGPU = "1.3.6"
 Adapt = "4.1.1"
 CUDA = "5.7"
 ConstructionBase = "1"
@@ -79,7 +79,7 @@ IterativeSolvers = "0.9"
 JLD2 = "0.4, 0.5"
 KernelAbstractions = "0.9.21"
 Krylov = "0.10.0"
-KrylovPreconditioners = "0.3.2"
+KrylovPreconditioners = "0.3.2 - 0.3.4"
 LinearAlgebra = "1.9"
 Logging = "1.9"
 MPI = "0.16, 0.17, 0.18, 0.19, 0.20"
@@ -88,7 +88,6 @@ MakieCore = "0.7, 0.8, 0.9, 0.10"
 Metal = "1.5"
 MuladdMacro = "0.2"
 NCDatasets = "0.12.10, 0.13.1, 0.14"
-oneAPI = "2.0.1"
 OffsetArrays = "1.4"
 OrderedCollections = "1.1"
 Printf = "1.9"
@@ -103,11 +102,11 @@ Statistics = "1.9"
 StructArrays = "0.4, 0.5, 0.6, 0.7"
 TimesDates = "0.3"
 julia = "1.9"
+oneAPI = "2.0.1"
 
 [extras]
 AMDGPU = "21141c5a-9bdb-4563-92ae-f87d6854732e"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
-CUDA_Runtime_jll = "76a88914-d11a-5bdc-97e0-2f5a05c973a2"
 DataDeps = "124859b0-ceae-595e-8997-d05f6a7a8dfe"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 Metal = "dde4c033-4e86-420c-a63e-0dd931031962"
@@ -119,4 +118,4 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TimesDates = "bdfc003b-8df8-5c39-adcd-3a9087f5df4a"
 
 [targets]
-test = ["AMDGPU", "CUDA", "oneAPI", "DataDeps", "SafeTestsets", "Test", "Enzyme", "Reactant", "Metal", "CUDA_Runtime_jll", "MPIPreferences", "TimesDates", "NCDatasets"]
+test = ["AMDGPU", "CUDA", "oneAPI", "DataDeps", "SafeTestsets", "Test", "Enzyme", "Reactant", "Metal", "MPIPreferences", "TimesDates", "NCDatasets"]
